# platform.core.system.tizen-platform-config

./: MIT  Makefile.am  configure.ac  libtzplatform-config.pc.in  project.config  tzplatform-create-skel
gumd/useradd.d/: 90_user-content-permissions.post
packaging/: tizen-platform-config-rpmlintrc  tizen-platform-config.spec
src/: Makefile.am
